--- a/homework/hw1/config.json
+++ b/homework/hw1/config.json
@@ -1,6 +1,6 @@
 {
     "seed": 7,
-    "feats": [],
+    "feats": [39, 40, 52, 55, 56, 68, 71, 72, 84, 87, 88, 100, 101, 102, 103, 104],
     "valid_ratio": 0.20,   
     "n_epochs": 3000,     
     "batch_size": 256,
@@ -13,5 +13,5 @@
     "early_stop": 400,
     "normalize_feats": false,
     "model": "SampleNN",
-    "model_name": "SampleNN_SGD_rmid_lr1e-5"
+    "model_name": "SampleNN_SGD_16feats_lr1e-5"
 }
