--- a/homework/hw1/config.json
+++ b/homework/hw1/config.json
@@ -6,14 +6,13 @@
     "valid_ratio": 0.20,   
     "n_epochs": 10000,     
     "batch_size": 256,
-    "optimizer": "SGD",
+    "optimizer": "Adam",
     "optimizer_hparams": {
-    	"lr": 1e-5,
-    	"weight_decay": 0.00,
-	"momentum": 0.9
+    	"lr": 1e-3,
+    	"weight_decay": 0.00
     },
     "early_stop": 400,
     "normalize_feats": false,
     "model": "ComplexNN",
-    "model_name": "ComplexNN_SGD_states_32feats_lr1e-5"
+    "model_name": "ComplexNN_Adam_states_32feats_lr1e-3"
 }
