--- a/homework/hw1/config.json
+++ b/homework/hw1/config.json
@@ -6,13 +6,13 @@
     "valid_ratio": 0.20,   
     "n_epochs": 10000,     
     "batch_size": 256,
-    "optimizer": "Adam",
+    "optimizer": "SGD",
     "optimizer_hparams": {
-    	"lr": 1e-4,
+    	"lr": 1e-5,
     	"weight_decay": 0.00
     },
-    "early_stop": 2000,
+    "early_stop": 300,
     "normalize_feats": false,
     "model": "ComplexNN",
-    "model_name": "ComplexNN_Adam_states_32feats_lr1e-4"
+    "model_name": "ComplexNN_SGD_states_32feats_lr1e-5"
 }
