--- a/homework/hw1/config.json
+++ b/homework/hw1/config.json
@@ -8,12 +8,12 @@
     "batch_size": 256,
     "optimizer": "SGD",
     "optimizer_hparams": {
-    	"lr": 5e-5,
+    	"lr": 1e-5,
     	"weight_decay": 0.00,
 	"momentum": 0.90
     },
-    "early_stop": 300,
+    "early_stop": 400,
     "normalize_feats": false,
-    "model": "ComplexNN",
-    "model_name": "ComplexNN_SGD_states_32feats_lr5e-5"
+    "model": "SampleNN",
+    "model_name": "SampleNN_SGD_states_32feats_lr1e-5"
 }
